--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,9 @@
 service: serverless-stepf-activities
 frameworkVersion: '2'
 
+plugins:
+  - serverless-step-functions
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -10,3 +13,28 @@ provider:
 functions:
   handler:
     handler: handler.handler
+
+stepFunctions:
+  stateMachines:
+    activityExample:
+      name: activities-example
+      definition:
+        Comment: Demonstrate how activity works
+        StartAt: WaitForActivity
+        States:
+          WaitForActivity:
+            Type: Task
+            Resource:
+              Fn::GetAtt: [MyActivity, Arn]
+            End: true
+
+resources:
+  Resources:
+    MyActivity:
+      Type: AWS::StepFunctions::Activity
+      Properties:
+        Name: myActivity
+    MyOtherActivity:
+      Type: AWS::StepFunctions::Activity
+      Properties:
+        Name: myOtherActivity
